--- a/chapter-hamiltonian-evolution.tex
+++ b/chapter-hamiltonian-evolution.tex
@@ -121,7 +121,7 @@ with the same notations.
 \section{Scattering matrix}
 \label{Scattering matrix}
 
-The scattering matrix can be developed quite easily on the basis of the plane wave states, i.e. by developing the initial and final states as:
+The scattering matrix can be developed quite easily on the basis of the plane wave states, \textit{i.e.} by developing the initial and final states as:
 \begin{eqnarray*}
 \ket{\Psi_i} & = & \sum_{\bFQ N \pt \q \sp} \FT{\Psi_i} \left( \bFQ N \pt \q \sp \right) \ket{\bFQ N \pt \q \sp} \\
 \ket{\Psi_f} & = & \sum_{\bFQ N \pt \q \sp} \FT{\Psi_f} \left( \bFQ N \pt \q \sp \right) \ket{\bFQ N \pt \q \sp}
