--- a/chapter-metaphysics.tex
+++ b/chapter-metaphysics.tex
@@ -6,7 +6,7 @@
 
 \section{Spinoza's philosophy}
 
-Since the interpretation of Quantum Field Theory I am about to give has been inspired by Spinoza's classical work \textit{The Ethics}~\cite{Spinoza1677}, I shall make here a short presentation of its basic ideas. According to the causalist world view of classical mechanics, each individual existent thing -- an object, a thought -- has necessarily a cause which explains its existence at a given moment. These things are considered to be alterations, or ``modes'', of some fundamental ``substance'' constitutive of Nature as a whole. Since this substance has some of the fundamental properties attributed to God by Judaic theology -- self-caused, free, eternal, infinite (i.e. containing everything) --, it has been identified by Spinoza to God itself, confounding thus the concept of `God' with what philosophers traditionally call `Nature'. The human intellect conceives the substance, as well as every individual existent thing, under the two aspects, or ``attributes'', of an extended (material) and of a thinking (mental) thing. This categorization, however, is nothing but a property of the human intellect and not an intrinsic property of the things themselves. Considered under its material aspect, a human being, for instance, consists in a body extending in the substance, i.e. in God, whereas it consists in a mind thinking in God when considered under its mental aspect. Nevertheless, both are one and the same thing, so that the laws of Physics -- considered to be part of the nature of God -- could determine the laws of Psychology. The knowledge of God, which also encompasses the knowledge of the world in general and of Man in particular, is therefore considered to be the mind's highest good.
+Since the interpretation of Quantum Field Theory I am about to give has been inspired by Spinoza's classical work \textit{The Ethics}~\cite{Spinoza1677}, I shall make here a short presentation of its basic ideas. According to the causalist world view of classical mechanics, each individual existent thing -- an object, a thought -- has necessarily a cause which explains its existence at a given moment. These things are considered to be alterations, or ``modes'', of some fundamental ``substance'' constitutive of Nature as a whole. Since this substance has some of the fundamental properties attributed to God by Judaic theology -- self-caused, free, eternal, infinite (\textit{i.e.} containing everything) --, it has been identified by Spinoza to God itself, confounding thus the concept of `God' with what philosophers traditionally call `Nature'. The human intellect conceives the substance, as well as every individual existent thing, under the two aspects, or ``attributes'', of an extended (material) and of a thinking (mental) thing. This categorization, however, is nothing but a property of the human intellect and not an intrinsic property of the things themselves. Considered under its material aspect, a human being, for instance, consists in a body extending in the substance, \textit{i.e.} in God, whereas it consists in a mind thinking in God when considered under its mental aspect. Nevertheless, both are one and the same thing, so that the laws of Physics -- considered to be part of the nature of God -- could determine the laws of Psychology. The knowledge of God, which also encompasses the knowledge of the world in general and of Man in particular, is therefore considered to be the mind's highest good.
 
 \section{Quantum metaphysics}
 
