--- a/chapter-quantum-electrodynamics.tex
+++ b/chapter-quantum-electrodynamics.tex
@@ -65,7 +65,7 @@ Its development on the plane waves basis is given by:
 
 \section{Dressed states}
 
-As a consequence of the electromagnetic interaction between the photon and the charged fermion fields, an excitation of a single particle field like $\ketQ N \pt \q \sp$ is unstable and is also a poor model for observed particles. In fact, these particles are always being observed ``dressed'', i.e. forming a particle complex together with excitations of the other fields. As a consequence, the ``bare'' rest mass, electric charge and magnetic moment of these particles, as they appear in the QED model, do not correspond to the values observed by dressed particles. These renormalized values as well as the composition of dressed particles can be calculated in the frame of QED as a function of the bare values, which can also be indirectly determined experimentally.
+As a consequence of the electromagnetic interaction between the photon and the charged fermion fields, an excitation of a single particle field like $\ketQ N \pt \q \sp$ is unstable and is also a poor model for observed particles. In fact, these particles are always being observed ``dressed'', \textit{i.e.} forming a particle complex together with excitations of the other fields. As a consequence, the ``bare'' rest mass, electric charge and magnetic moment of these particles, as they appear in the QED model, do not correspond to the values observed by dressed particles. These renormalized values as well as the composition of dressed particles can be calculated in the frame of QED as a function of the bare values, which can also be indirectly determined experimentally.
 
 We consider a bare state of the form $\ket{{\bFQ N \pt \q \sp}_0}$ and will derive the corresponding dressed state $\ket{\Psi}$ as eigenstate of $\Hop_0 + \Hop'$ for an eigenvalue $E$ to be determined. Assuming the bare and dressed states aren't orthogonal to each other, we write the latter as:
 \begin{equation*}
@@ -98,7 +98,7 @@ where we take:
 \Hop'^{(2)} & \eqdef & \sum_{\n} \Qop \n \Vop \n \\
 \FT \Phi_{a,0}^{(0)} & \eqdef & \delta_{a,0}
 \end{eqnarray*}
-In the case of bare states which are nondegenerate with respect to $\Hop_0$, i.e. such as $E_2 \neq E_0$ for any ${\bFQ N \pt \q \sp}_2 \neq {\bFQ N \pt \q \sp}_0$, assuming that the eigenvalue equation should hold to each order separately, we have to the zeroth order:
+In the case of bare states which are nondegenerate with respect to $\Hop_0$, \textit{i.e.} such as $E_2 \neq E_0$ for any ${\bFQ N \pt \q \sp}_2 \neq {\bFQ N \pt \q \sp}_0$, assuming that the eigenvalue equation should hold to each order separately, we have to the zeroth order:
 \begin{equation*}
 E^{(0)} = E_0
 \end{equation*}
