--- a/chapter-stochastic-evolution.tex
+++ b/chapter-stochastic-evolution.tex
@@ -10,7 +10,7 @@ In the joint evolution of the mental and quantum states of the universe, I suppo
 \begin{equation*}
 P(\cms) = \frac{\bra\Psi \op{\Pi}_\cms \ket\Psi}{\braket\Psi\Psi}
 \end{equation*}
-where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$. Furthermore, I suppose that this projection corresponds to the fact that, in the mental world, the collective mind state $\cms = \bFM N \ims$ is being experienced, i.e. each possible individual mind state $\ims$ is being experienced by $\bM N \ims$ individual minds. We call the material part of this process ``collapse'' of the quantum state of the universe and its mental counterpart ``collective mind selection''. The operators $\op{\Pi}_\cms$ are called ``collapse operators''. As a working hypothesis, we assume that the period $\tau$ of this process is of the order of the Plank time:
+where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$. Furthermore, I suppose that this projection corresponds to the fact that, in the mental world, the collective mind state $\cms = \bFM N \ims$ is being experienced, \textit{i.e.} each possible individual mind state $\ims$ is being experienced by $\bM N \ims$ individual minds. We call the material part of this process ``collapse'' of the quantum state of the universe and its mental counterpart ``collective mind selection''. The operators $\op{\Pi}_\cms$ are called ``collapse operators''. As a working hypothesis, we assume that the period $\tau$ of this process is of the order of the Plank time:
 \begin{equation*}
 \tau \approx \sqrt{4\pi\G \h/\c^5}\approx4.8~10^{-43}\ \mathrm s
 \end{equation*}
@@ -77,7 +77,7 @@ where $\op \Pi_{f^\pm} = \sum_{\cms_f^\pm} \op \Pi_{\cms_f^\pm}$. The conditiona
 \end{equation*}
 and we call it ``transition probability'' from $\H_i$ to $\H_f^+$.
 
-If the experiment is conceived in such a way that the studied system is isolated from the observer for the duration of the experiment until it interacts with some measurement apparatus, the experiment is considered to have failed if the observer has gained some information about the studied system before it interacts with this apparatus. An intermediate observation of the system, as it would leave a permanent trace in the memory of the observer, would lead with a vanishingly small probability to a final state of the minds in which the observer isn't conscious of having made this observation. The only intermediate states of the minds $\cms_1, \dotsc, \cms_{t - 1}$ to be considered in the above sums (i.e. which haven't a vanishingly small contribution to the transition probability) correspond also to projectors that don't affect the Hamiltonian evolution of the studied system. In that case, the absolute probability of measuring the given outcome resp. its absence can be approximated by:
+If the experiment is conceived in such a way that the studied system is isolated from the observer for the duration of the experiment until it interacts with some measurement apparatus, the experiment is considered to have failed if the observer has gained some information about the studied system before it interacts with this apparatus. An intermediate observation of the system, as it would leave a permanent trace in the memory of the observer, would lead with a vanishingly small probability to a final state of the minds in which the observer isn't conscious of having made this observation. The only intermediate states of the minds $\cms_1, \dotsc, \cms_{t - 1}$ to be considered in the above sums (\textit{i.e.} which haven't a vanishingly small contribution to the transition probability) correspond also to projectors that don't affect the Hamiltonian evolution of the studied system. In that case, the absolute probability of measuring the given outcome resp. its absence can be approximated by:
 \begin{equation*}
 \TP{\H_i}{\H_f^\pm} \approx \mathrm{Tr}_{\H_i} \dop U_{t \tau} \op \Pi_{f^\pm} \op U_{t \tau} / \mathrm{dim} \H_i
 \end{equation*}
@@ -123,7 +123,7 @@ To the order $n \geq 2$, the transition probability between plane wave states $\
 & = & \delta_{f,i} \sideset{}{_{k=1}^{n-1}}\sum_{\bFQ {N_k} \pt \q \sp} \left( \Smp n {i,\dotsc,i} + \cc{\Smp n {i,\dotsc,i}} \right) \\
 && + \sum_{\substack{n_1 + n_2 = n \\ n_1, n_2 \geq 1}} \cc{\Smn f i {n_1}} \Smn f i {n_2}
 \end{eqnarray*}
-The first term vanishes for $f \neq i$. The development of the last term involves a ``closed loop'' of length $n$ from $i$ to $i$ over $f$, i.e. a summation over $n - 2$ intermediate states $\ket{\bFQ {N_k} \pt \q \sp}$, where $k \in \IntRange{-n_1}{n_2}$, $\bFQ {N_0} \pt \q \sp = \bFQ {N_i} \pt \q \sp$ and $\bFQ {N_{-n_1}} \pt \q \sp = \bFQ {N_{n_2}} \pt \q \sp = \bFQ {N_f} \pt \q \sp$, and can be written as:
+The first term vanishes for $f \neq i$. The development of the last term involves a ``closed loop'' of length $n$ from $i$ to $i$ over $f$, \textit{i.e.} a summation over $n - 2$ intermediate states $\ket{\bFQ {N_k} \pt \q \sp}$, where $k \in \IntRange{-n_1}{n_2}$, $\bFQ {N_0} \pt \q \sp = \bFQ {N_i} \pt \q \sp$ and $\bFQ {N_{-n_1}} \pt \q \sp = \bFQ {N_{n_2}} \pt \q \sp = \bFQ {N_f} \pt \q \sp$, and can be written as:
 \begin{multline*}
 \sum_{\substack{n_1 + n_2 = n \\ n_1, n_2 \geq 1}} \sideset{}{_{k=-n_1}^{n_2}}\sum_{\bFQ {N_k} \pt \q \sp} \left( \prod_{k = -n_1}^{n_2 - 1} H'_{k+1,k} \right) \cc{\SmE{n_1}{E_{-n_1}, \dotsc, E_0}} \SmE{n_2}{E_{n_2}, \dotsc, E_0}
 \end{multline*}
@@ -204,7 +204,7 @@ This (purely material) situation lasts until the next process of collapse and co
 \hspace*{3mm}\Superposition\hspace*{3mm}
 \Atom\hspace*{3mm}\DetectorOn\hspace*{3mm}\ObserverOff
 \end{flushleft}
-i.e. the detector has still been activated, but the observer didn't yet notice it. In the second case, the state of the universe becomes:
+\textit{i.e.} the detector has still been activated, but the observer didn't yet notice it. In the second case, the state of the universe becomes:
 \begin{flushleft}
 \Atom\hspace*{3mm}\DetectorOn\hspace*{3mm}\ObserverOn
 \end{flushleft}
