--- a/chapter-mental-states.tex
+++ b/chapter-mental-states.tex
@@ -6,7 +6,7 @@
 
 \section{The mind-body problem}
 
-Since the end of the second World War and the translation of the intellectual center of the scientific community from Europe to the United States of America, materialism, i.e. the complete reduction of our experience of mind to purely material processes, has become the philosophical conviction of mainstream physicists, although they still may have opposite religious beliefs as private persons. Of course, it doesn't make any doubt that the biological activity of human and similar animal brains is involved in the processing of external and internal stimuli, and it is reasonable to believe that, at the material level, conscious thinking is the emerging result of an intensive and highly parallelized information processing activity by the brain's neural network. Nevertheless, ``mind'', i.e. the form of our experience of the world, with our feelings, our body schema, memories seen with the mind's eye, melodies imagined in the mind's ear... is just not \textit{the same} as the neural activity of an individual body (which is anyhow hardly identifiable quantum physically). Determining the relation between these two realities is the essence of the mind-body problem, which has become the most various answers over the ages. The usual divergence points arise about the questions: Do both realities exist at all, or is one of them a mere illusion? Are they independent of each other and just exist as parallel realities, or are there divergences and a mutual influence in the one, the other or both directions? In this old debate, Quantum Field Theory introduces the new idea that a mutual influence doesn't have to be a deterministic causal influence but also could be a probabilistic one, so that neither ``mind'' nor ``body'' have to be kind of a subordinated slave of its counterpart, but retain to some extent a form of ``freedom'' under its influence. I think this idea should have the potential to take some heat out of the debate.
+Since the end of the second World War and the translation of the intellectual center of the scientific community from Europe to the United States of America, materialism, \textit{i.e.} the complete reduction of our experience of mind to purely material processes, has become the philosophical conviction of mainstream physicists, although they still may have opposite religious beliefs as private persons. Of course, it doesn't make any doubt that the biological activity of human and similar animal brains is involved in the processing of external and internal stimuli, and it is reasonable to believe that, at the material level, conscious thinking is the emerging result of an intensive and highly parallelized information processing activity by the brain's neural network. Nevertheless, ``mind'', \textit{i.e.} the form of our experience of the world, with our feelings, our body schema, memories seen with the mind's eye, melodies imagined in the mind's ear... is just not \textit{the same} as the neural activity of an individual body (which is anyhow hardly identifiable quantum physically). Determining the relation between these two realities is the essence of the mind-body problem, which has become the most various answers over the ages. The usual divergence points arise about the questions: Do both realities exist at all, or is one of them a mere illusion? Are they independent of each other and just exist as parallel realities, or are there divergences and a mutual influence in the one, the other or both directions? In this old debate, Quantum Field Theory introduces the new idea that a mutual influence doesn't have to be a deterministic causal influence but also could be a probabilistic one, so that neither ``mind'' nor ``body'' have to be kind of a subordinated slave of its counterpart, but retain to some extent a form of ``freedom'' under its influence. I think this idea should have the potential to take some heat out of the debate.
 
 \section{Individual mind}
 
@@ -24,7 +24,7 @@ The correspondence between mental and quantum states is given by a Hilbert subsp
 \end{equation*}
 Each vector $\ket \Psi \in \H_\cms \setminus \{0\}$ is a quantum state of the universe in which the mental state $\cms$ is being experienced. Knowing the correspondence between mental states and mental subspaces is in essence solving the mind-body problem. As a working hypothesis, I shall assume that a mental state $\cms = \bFM N \ims$ is being realized physically by any quantum state describing a universe containing, for each individual mind state $\ims$, exactly $\bM N \ims$ human or animal brains presenting the specific activity pattern corresponding to $\ims$. The task of describing the possible individual mind states belongs in principle to psychology or philosophical phenomenology, whereas the characterization of the corresponding activity patterns of the brain is the aim of cognitive neuroscience.
 
-In mathematical terms, this hypothesis can be modeled as follows. First, the mental state $\cms_\vac \eqdef \bFM 0 \ims$, in which no ``sentient being'' is experiencing any individual mind state, is supposed to be possible, i.e. the corresponding subspace $\H_{\cms_\vac}$ is supposed not to be reduced to the zero subspace. Then, for each possible individual mind state $\ims$, there is supposed to be a finite family of brain creation operators $(\dop{\Psi_\ims^\alpha})$ in $\cAlg$, which are creating a single brain with an activity pattern corresponding to $\ims$, such as:
+In mathematical terms, this hypothesis can be modeled as follows. First, the mental state $\cms_\vac \eqdef \bFM 0 \ims$, in which no ``sentient being'' is experiencing any individual mind state, is supposed to be possible, \textit{i.e.} the corresponding subspace $\H_{\cms_\vac}$ is supposed not to be reduced to the zero subspace. Then, for each possible individual mind state $\ims$, there is supposed to be a finite family of brain creation operators $(\dop{\Psi_\ims^\alpha})$ in $\cAlg$, which are creating a single brain with an activity pattern corresponding to $\ims$, such as:
 \begin{equation*}
 \H_{\bM 1 \ims} = \bigoplus_{\alpha}^\perp \dop{\Psi_\ims^\alpha} \H_{\cms_\vac}
 \end{equation*}
