--- a/chapter-wave-packets.tex
+++ b/chapter-wave-packets.tex
@@ -3,7 +3,7 @@
 
 \section{Gaussian wave packet}
 
-A well-known consequence of the quantum formalism is the impossibility to describe a particle, like in classical mechanics, as a mass point having at each instant a well-defined position and velocity. In the quantum mechanics of a single particle in continuous space-time, the movement of the wave packet defining its statistical position can still be described, like in classical fluid mechanics, by a probability current density (which is related to the phase gradient of the wave packet), but as soon as several particles are present or are even being created and annihilated like in Quantum Field Theory, the analogy to classical fluid mechanics becomes much more elusive. It is still possible, however, to describe approximate particle trajectories in the frame of Quantum Field Theory if one considers that proper quantum effects may remain beyond the reach of experimental precision in some situations. Gaussian wave packets are a typical model of such particles with a quasi-classical behavior, i.e. with a position and a velocity being well-defined to a good approximation.
+A well-known consequence of the quantum formalism is the impossibility to describe a particle, like in classical mechanics, as a mass point having at each instant a well-defined position and velocity. In the quantum mechanics of a single particle in continuous space-time, the movement of the wave packet defining its statistical position can still be described, like in classical fluid mechanics, by a probability current density (which is related to the phase gradient of the wave packet), but as soon as several particles are present or are even being created and annihilated like in Quantum Field Theory, the analogy to classical fluid mechanics becomes much more elusive. It is still possible, however, to describe approximate particle trajectories in the frame of Quantum Field Theory if one considers that proper quantum effects may remain beyond the reach of experimental precision in some situations. Gaussian wave packets are a typical model of such particles with a quasi-classical behavior, \textit{i.e.} with a position and a velocity being well-defined to a good approximation.
 
 A Gaussian wave packet of a particle of type $\pt$ and in the spin state $\sp$, with a mean momentum $\q_0 \in (\IZ/(1+2\N))^3$, a mean position $\n_0 \in \IR^3$ and a width $w_0 \in \IR_+^*$, is given by:
 \begin{eqnarray*}
