--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -126,9 +126,9 @@ for any quantum state $\ket{\Psi} \in \H \setminus \{ 0 \}$ and any $t \in \IN$.
 \begin{equation*}
 \H_\cms = \H_\cms^{\infty} \operp \H_\cms^{\infty \perp}
 \end{equation*}
-isn't reduced to the zero subspace. We will consider the endomorphism $U_\cms$ induced by $U_\tau$ on $\H_\cms$, given by:
+isn't reduced to the zero subspace. We will consider the endomorphism $\op U_\cms$ induced by $\op U_\tau$ on $\H_\cms$, given by:
 \begin{equation*}
-U_\cms \eqdef \op \Pi_\cms U_\tau \op \Pi_\cms
+\op U_\cms \eqdef \op \Pi_\cms \op U_\tau \op \Pi_\cms
 \end{equation*}
 With this operator, we can write for any $t \in \IN^*$ and any quantum state $\ket{\Psi} \in \H \setminus \{ 0 \}$:
 \begin{equation*}
