--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -209,7 +209,7 @@ Any eventually dying sequence is therefore infinitely improbable, \textit{Q.~E.~
 \end{equation*}
 where the sequence $(\cms_t)$ is eventually dying. As a consequence of the lemma, this probability is zero, hence we will experience with certainty a different mental state in the future. This theorem holds for any time $t > t_1$, too: There will be with certainty a time $t' > t$ such that $\cms_{t'} \neq \cms_t$. So basically, once the experienced mental state has changed for the first time in the history of the universe, it will ``keep moving'' forever, although it is still possible that there are long periods of ``mental inactivity'' in between.
 
-This applies in particular to the moment when the Sun, in about five billions of years, will have eventually evolved to a red giant and make the Earth an unsuitable place for any form of conscious life. By then, if there isn't yet any extra-terrestrial form of conscious life, the experienced mental state should be $\cms_\vac$, \textit{i.e.} the absence of any mental experience. But this state cannot last forever, as we have just seen. If we call ``extra-terrestrial form of conscious life'' the material substrate of the mental state that would get experienced next, then there will be some with certainty.
+This applies in particular to the moment when the Sun, in about five billions of years, will have eventually evolved to a red giant and made the Earth an unsuitable place for any form of conscious life. By then, if there isn't yet any extra-terrestrial form of conscious life, the experienced mental state should be $\cms_\vac$, \textit{i.e.} the absence of any mental experience. But this state cannot last forever, as we have just seen. If we call ``extra-terrestrial form of conscious life'' the material substrate of the mental state that would get experienced next, then there will be some with certainty.
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
