--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -197,6 +197,8 @@ Now we've already seen that, for any quantum state $\ket{\Psi}$ orthogonal to $\
 \end{equation*}
 Any eventually dying sequence is therefore infinitely improbable, \textit{Q.~E.~D.}
 
+\paragraphtitle{Remark} This result is actually a quite intuitive consequence of the finite dimensionality of the Hilbert space $\H$. Precisely, the key argument -- the compacity of the unit sphere of $\H_\cms^{\infty \perp}$ -- requires that these subspaces -- the ``accessible'' part of the mental subspaces -- be finite dimensional. This condition being given, the result would still hold if the ``inaccessible'' part $\H_\cms^\infty$ of the mental subspaces were infinite dimensional, and/or if there were an infinite number of possible mental states.
+
 \paragraphtitle{Theorem} No quantum state is mortal.
 
 \paragraphtitle{Proof} This is an immediate consequence of the lemma.
