Corrected wrong usages of 'such as'

--- a/chapter-hamiltonian-evolution.tex
+++ b/chapter-hamiltonian-evolution.tex
@@ -105,7 +105,7 @@ with:
 \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ), t \right) \eqdef \prod_{\substack{\pt, \sp \\ {N_f}^\pt_\sp \neq 0}} \frac{(1+2 \N)^{-3 {N_f}^\pt_\sp / 2} }{\prod_{\n} \bX {N_f} \pt \n \sp !} \sum_{\sigma \in \mathfrak{S}_{{N_f}^\pt_\sp}} \prod_{j = 1}^{{N_f}^\pt_\sp} \\
 \exp{\i 2 \pi ( \n^{\pt, \sp}_{\sigma_j} \ssp \q^{\pt, \sp}_j - \Ek \pt {\q^{\pt, \sp}_j} t / \h )}
 \end{multline*}
-where the summation runs over plane wave states $\bFQ {N_f} \pt \q \sp$ such as $\sum_{\q} \bQ {N_f} \pt \q \sp = \sum_{\n} \bX {N_f} \pt \n \sp$ for each mode $( \pt, \sp )$ of the field, where we use the notations $\Sm f i \eqdef \bra{\bFQ {N_f} \pt \q \sp} \Sop \ket{\bFQ {N_i} \pt \q \sp}$ and ${N_f}^\pt_\sp \eqdef \sum_{\n} \bX {N_f} \pt \n \sp$, where $\mathfrak{S}_{{N_f}^\pt_\sp}$ denotes the symmetric group of order ${N_f}^\pt_\sp$ and where we have chosen for each mode $( \pt, \sp )$ of the field the families $( \n^{\pt, \sp}_j )$ and $( \q^{\pt, \sp}_j )$ such as:
+where the summation runs over plane wave states $\bFQ {N_f} \pt \q \sp$ such that $\sum_{\q} \bQ {N_f} \pt \q \sp = \sum_{\n} \bX {N_f} \pt \n \sp$ for each mode $( \pt, \sp )$ of the field, where we use the notations $\Sm f i \eqdef \bra{\bFQ {N_f} \pt \q \sp} \Sop \ket{\bFQ {N_i} \pt \q \sp}$ and ${N_f}^\pt_\sp \eqdef \sum_{\n} \bX {N_f} \pt \n \sp$, where $\mathfrak{S}_{{N_f}^\pt_\sp}$ denotes the symmetric group of order ${N_f}^\pt_\sp$ and where we have chosen for each mode $( \pt, \sp )$ of the field the families $( \n^{\pt, \sp}_j )$ and $( \q^{\pt, \sp}_j )$ so that:
 \begin{eqnarray*}
 \ket{\bFX {N_f} \pt \n \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\n^{\pt, \sp}_j} \sp \ket{\vac} \\
 \ket{\bFQ {N_f} \pt \q \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\q^{\pt, \sp}_j} \sp \ket{\vac}
@@ -185,7 +185,7 @@ More generally, the explicit perturbative development of the transition amplitud
 \Umn f i n t {t_0} = \sum_{\bFQ {N_i} \pt \q \sp} \FT{\Psi_i} \left( \bFQ {N_i} \pt \q \sp \right) \sum_{\bFQ {N_f} \pt \q \sp} \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) \\
 \exp{-\i 2 \pi \frac{t - t_0} \h E_f} \sideset{}{_{k=0}^n}\sum_{\bFQ {N_k} \pt \q \sp} \SmE n {E_n, \dotsc, E_0} \prod_{k=1}^n H'_{k,k-1}
 \end{multline*}
-where the summation runs over plane wave states $\bFQ {N_f} \pt \q \sp$ such as $\sum_{\q} \bQ {N_f} \pt \q \sp = \sum_{\n} \bX {N_f} \pt \n \sp$ for each mode $( \pt, \sp )$ of the field, and where we use the notation:
+where the summation runs over plane wave states $\bFQ {N_f} \pt \q \sp$ such that $\sum_{\q} \bQ {N_f} \pt \q \sp = \sum_{\n} \bX {N_f} \pt \n \sp$ for each mode $( \pt, \sp )$ of the field, and where we use the notation:
 \begin{equation*}
 \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) \eqdef \prod_{\substack{\pt, \sp \\ {N_f}^\pt_\sp \neq 0}} \frac{(1+2 \N)^{-3 {N_f}^\pt_\sp / 2} }{\prod_{\n} \bX {N_f} \pt \n \sp !} \sum_{\sigma \in \mathfrak{S}_{{N_f}^\pt_\sp}} \prod_{j = 1}^{{N_f}^\pt_\sp} \exp{\i 2 \pi \n^{\pt, \sp}_{\sigma_j} \ssp \q^{\pt, \sp}_j}
 \end{equation*}
