--- a/chapter-quantum-electrodynamics.tex
+++ b/chapter-quantum-electrodynamics.tex
@@ -98,7 +98,7 @@ where we take:
 \Hop'^{(2)} & \eqdef & \sum_{\n} \Qop \n \Vop \n \\
 \FT \Phi_{a,0}^{(0)} & \eqdef & \delta_{a,0}
 \end{eqnarray*}
-In the case of bare states which are nondegenerate with respect to $\Hop_0$, \textit{i.e.} such as $E_2 \neq E_0$ for any ${\bFQ N \pt \q \sp}_2 \neq {\bFQ N \pt \q \sp}_0$, assuming that the eigenvalue equation should hold to each order separately, we have to the zeroth order:
+In the case of bare states which are nondegenerate with respect to $\Hop_0$, \textit{i.e.} such that $E_2 \neq E_0$ for any ${\bFQ N \pt \q \sp}_2 \neq {\bFQ N \pt \q \sp}_0$, assuming that the eigenvalue equation should hold to each order separately, we have to the zeroth order:
 \begin{equation*}
 E^{(0)} = E_0
 \end{equation*}
