--- a/chapter-quantum-fields.tex
+++ b/chapter-quantum-fields.tex
@@ -208,7 +208,7 @@ These vectors form an orthonormal basis of the Hilbert space $\H$ called the ``m
 \braket{\bFX N \pt \n \sp}{\bFQ {N'} \pt \q \sp} & = & \left[ \prod_{\pt, \sp} \delta\left( {N'}^\pt_\sp - N^\pt_\sp \right) \right] \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) \\
 \psi \left( ( \q^{\pt, \sp}_j ), ( \n^{\pt, \sp}_j ) \right) & \eqdef & \prod_{\substack{\pt, \sp \\ N^\pt_\sp \neq 0}} \frac{(1+2 \N)^{-3 N^\pt_\sp / 2} }{\prod_{\n} \bX N \pt \n \sp !} \sum_{\sigma \in \mathfrak{S}_{N^\pt_\sp}} \prod_{j = 1}^{N^\pt_\sp} \exp{\i 2 \pi \n^{\pt, \sp}_{\sigma_j} \ssp \q^{\pt, \sp}_j}
 \end{eqnarray*}
-where we use the notations ${N'}^\pt_\sp \eqdef \sum_{\q} \bQ {N'} \pt \q \sp$ and $N^\pt_\sp \eqdef \sum_{\n} \bX N \pt \n \sp$, where $\mathfrak{S}_{N^\pt_\sp}$ denotes the symmetric group of order $N^\pt_\sp$ and where we have chosen for each mode $( \pt, \sp )$ of the field the families $( \n^{\pt, \sp}_j )$ and $( \q^{\pt, \sp}_j )$ such as:
+where we use the notations ${N'}^\pt_\sp \eqdef \sum_{\q} \bQ {N'} \pt \q \sp$ and $N^\pt_\sp \eqdef \sum_{\n} \bX N \pt \n \sp$, where $\mathfrak{S}_{N^\pt_\sp}$ denotes the symmetric group of order $N^\pt_\sp$ and where we have chosen for each mode $( \pt, \sp )$ of the field the families $( \n^{\pt, \sp}_j )$ and $( \q^{\pt, \sp}_j )$ so that:
 \begin{eqnarray*}
 \ket{\bFX N \pt \n \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\n^{\pt, \sp}_j} \sp \ket{\vac} \\
 \ket{\bFQ {N'} \pt \q \sp} & = & \prod_{\pt, \sp, j} \cop \pt {\q^{\pt, \sp}_j} \sp \ket{\vac}
