--- a/chapter-wave-packets.tex
+++ b/chapter-wave-packets.tex
@@ -24,7 +24,7 @@ with the numerical factor:
 \begin{equation*}
 A(\n - \n_0'(\n),w_0) \eqdef (2w_0^2)^{3/2} (1+2\N)^{-3} \sum_{\q} \exp{-2 \pi w_0^2 \left( \q - \i (\n - \n_0'(\n))/2 w_0^2 \right)^2}
 \end{equation*}
-where $\n_0'(\n)$ can be chosen arbitrarily in $\n_0 + ((1+2\N) \IZ)^3$. In the usual case where $1 \ll w_0 \ll \N$, this factor approximates to 1 if $\n_0'(\n)$ can be chosen such as $\| \n-\n_0'(\n) \| \ll \N$. To the zeroth order, the Hamiltonian evolution of the Gaussian wave packet $\ket{\Psi_0} = \dop{G^\pt_\sp}(\q_0,\n_0,w_0) \ket \vac$ is given by:
+where $\n_0'(\n)$ can be chosen arbitrarily in $\n_0 + ((1+2\N) \IZ)^3$. In the usual case where $1 \ll w_0 \ll \N$, this factor approximates to 1 if $\n_0'(\n)$ can be chosen such that $\| \n-\n_0'(\n) \| \ll \N$. To the zeroth order, the Hamiltonian evolution of the Gaussian wave packet $\ket{\Psi_0} = \dop{G^\pt_\sp}(\q_0,\n_0,w_0) \ket \vac$ is given by:
 \begin{eqnarray*}
 \ket{\Psi_t} & = & C(\q_0,w_0) (2w_0)^{3/2} (1+2\N)^{-3/2} \\
 && \sum_{\q} \exp{-2 \pi w_0^2 \q^2 - \i 2 \pi \q \ssp \n_0 -\i 2 \pi \Ek \pt {\q_0+\q} (t - t_0) / \h} \cop\pt{\q_0+\q}\sp \ket \vac
