Extended book subtitle

--- a/frontmatter-title-page.tex
+++ b/frontmatter-title-page.tex
@@ -5,8 +5,9 @@
 \begin{center}
 {\Huge \textbf{Quantum\\Ethics}}
 \vskip 1.2cm
-A Spinozist Interpretation \\
-of Quantum Field Theory
+A Spinozist Interpretation\\
+of Constructive Quantum Field Theory\\
+on the Lattice
 \vskip 2cm
 {\large Sébastien Fauvel}
 \end{center}
