--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -115,7 +115,7 @@ n_\cms = \min \{ n \in \IN\ |\ \H_\cms^n = \H_\cms^{n+1} \}
 \end{equation*}
 and we have $\H_\cms^{n_\cms} = \H_\cms^\infty$.
 
-\paragraphtitle{§} In the special case $n_\cms = 0$, it is trivial to show that $\mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi})$ tends to $\bra{\Psi} \op \Pi_{\H_\cms^\infty} / \braket{\Psi}{\Psi}$ for any initial quantum state $\ket{\Psi} \neq 0$. In this case, we have $\H_\cms^\infty = \H_\cms$ and we will see that  $\mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi}) = \bra{\Psi} \op \Pi_{\H_\cms^\infty} \ket{\Psi} / \braket{\Psi}{\Psi}$ for any $t \in \IN$. The assertion holds for $t = 0$ per definition, and $\op \Pi_\cms \ket{\Psi} \in \H_\cms$ since $\op \Pi_\cms$ is a projection operator on $\H_\cms$. For any quantum state $\ket{\Psi_\cms} \in \H_\cms$, $\op U_\tau \ket{\Psi_\cms}$ has the same norm as $\ket{\Psi_\cms}$ because of the unitarity of $\op U_\tau$, and since $\H_\cms = \H_\cms^\infty \subset \op U_\tau^{-1} \H_\cms$, $\op U_\tau \ket{\Psi_\cms}$ belongs to $\H_\cms$, so that $\op \Pi_\cms \op U_\tau \ket{\Psi_\cms}$ is equal to $\op U_\tau \ket{\Psi_\cms}$ and has the same norm as $\ket{\Psi_\cms}$, too. It is easy then to prove by recurrence that $(\op \Pi_\cms \op U_\tau)^t \ket{\Psi_\cms}$ is equal to $\op U_\tau^t \ket{\Psi_\cms}$ and has therefore the same norm as $\ket{\Psi_\cms}$ for any $t \in \IN$, so that we have:
+\paragraphtitle{§} In the special case $n_\cms = 0$, it is trivial to show that $\mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi})$ tends to $\bra{\Psi} \op \Pi_{\H_\cms^\infty} \ket{\Psi} / \braket{\Psi}{\Psi}$ for any initial quantum state $\ket{\Psi} \neq 0$. In this case, we have $\H_\cms^\infty = \H_\cms$ and we will see that  $\mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi}) = \bra{\Psi} \op \Pi_{\H_\cms^\infty} \ket{\Psi} / \braket{\Psi}{\Psi}$ for any $t \in \IN$. The assertion holds for $t = 0$ per definition, and $\op \Pi_\cms \ket{\Psi} \in \H_\cms$ since $\op \Pi_\cms$ is a projection operator on $\H_\cms$. For any quantum state $\ket{\Psi_\cms} \in \H_\cms$, $\op U_\tau \ket{\Psi_\cms}$ has the same norm as $\ket{\Psi_\cms}$ because of the unitarity of $\op U_\tau$, and since $\H_\cms = \H_\cms^\infty \subset \op U_\tau^{-1} \H_\cms$, $\op U_\tau \ket{\Psi_\cms}$ belongs to $\H_\cms$, so that $\op \Pi_\cms \op U_\tau \ket{\Psi_\cms}$ is equal to $\op U_\tau \ket{\Psi_\cms}$ and has the same norm as $\ket{\Psi_\cms}$, too. It is easy then to prove by recurrence that $(\op \Pi_\cms \op U_\tau)^t \ket{\Psi_\cms}$ is equal to $\op U_\tau^t \ket{\Psi_\cms}$ and has therefore the same norm as $\ket{\Psi_\cms}$ for any $t \in \IN$, so that we have:
 \begin{eqnarray*}
 \mathrm P_t(\cms, \dotsc, \cms; \ket{\Psi}) & = & \bra{\Psi} \op \Pi_\cms (\dop U_\tau \op \Pi_\cms)^t (\op \Pi_\cms \op U_\tau)^t \op \Pi_\cms \ket{\Psi} / \braket{\Psi}{\Psi} \\
 & = & \bra{\Psi} \op \Pi_\cms \ket{\Psi} / \braket{\Psi}{\Psi} = \bra{\Psi} \op \Pi_{\H_\cms^\infty} \ket{\Psi} / \braket{\Psi}{\Psi}
